# kridtiler

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  config.example.toml  screenshot.webm
crates/kridtiler-cli/: Cargo.toml
crates/kridtiler-cli/src/: config.rs  main.rs  preset.rs
kwin-script/: monitors.js.tmpl  overlay-probe.qml  overlay.qml.tmpl  popup.qml.tmpl  smoke.js  tile.js.tmpl
