[workspace]
resolver = "2"
members = ["crates/kridtiler-cli"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/QuickerHub/kridtiler"

[workspace.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
