[package]
name = "kridtiler-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kridtiler"
path = "src/main.rs"

[dependencies]
zbus.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
toml.workspace = true
futures-util = "0.3"
libc = "0.2"
